1999-05-24  Dan Espen  <dane@mk.bellcore.com>

	* fvwm/functions.c (expand): Applied patch from Brad to fix
	expansion of NULL args.

Sun May 23 16:49:12 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* utils/Makefile.am (fvwmbug): generate fvwmbug from fvwmbug.sh
	* configure.in: generate utils/fvwmbug.sh from utils/fvwmbug.sh.in.

	* utils/fvwmbug.sh.in: new file.
	* utils/fvwmbug.1: new file.

1999-05-23  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/module_interface.c (DeadPipe): backed out DeadPipe signal
	handler

Sat May 22 17:40:57 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* fvwm/menus.c (PopDownMenu): removed unused variable `f'.

	* fvwm/fvwm.c (CaptureOneWindow): removed unused variable `data'.

	* libs/Bindings.c (GrabWindowKey): removed unused variable
 	`counter'.

1999-05-22  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/screen.h (ButtonState):
	* fvwm/builtins.c (button_states): new button states ToggledActiveUp,
	ToggledActiveDown, ToggledInactive.
	* fvwm/borders.c (get_button_state): new argument Bool toggled.
	(SetBorder):
	(SetTitleBar): calculate toggled and feed it to get_button_state.
	* NEWS:
	* fvwm/fvwm2.1: explain new toggled button states.

	* NEWS:
	* fvwm/fvwm2.1:
	* fvwm/screen.h:
	* fvwm/borders.c (DrawButton):
	* fvwm/builtins.c (ButtonStyle): add MWMDecorStick as a button
	style flag to support toggle buttons for the Stick function.

	* fvwm/borders.c (SetBorder):
	* fvwm/builtins.c (ChangeDecor): Make SetBorder with force > 1
	mean: do a *full* redraw, including backgrounds. Use this to
	fix ChangeDecor.

	* fvwm/builtins.c (CreateConditionMask):
	* NEWS:
	* fvwm/fvwm2.1: Add [!]Shaded to the supported conditions.

1999-05-21  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/fvwm2.1: replace one occurance of MWMDecorMax by
	MWMDecorShade.

1999-05-22  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (NewMenuStyle): new options HoldSubmenus and
	DeleteSubmenus
